2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am: Add ppc linux bootcheck.
	* grub-core/tests/boot/linux-ppc.cfg: New file.
	* grub-core/tests/boot/linux.init-ppc.S: Likewise.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/grub_script_expansion.in: Skip network protocols.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Use escc-ch-a port on ppc.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/powerpc/ieee1275/grub-mkrescue.in: Handle (and ignore)
	--rom-directory.
	Add -graft-points.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	ESCC serial driver for conducting sautomated tests in qemu.
	Not tested on real hardware.

	* include/grub/serial.h (grub_serial_port): New field escc_desc.
	* grub-core/term/ieee1275/escc.c: New file.
	* grub-core/Makefile.core.def (escc): New module.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ieee1275/serial.c (do_real_config): Set handle to
	invalid on error.
	(serial_hw_fetch): Don't read invalid handle.
	(serial_hw_put): Don't write into invalid handle.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Add a 1.5 stop bits value.

	* grub-core/term/serial.c (grub_cmd_serial): Handle 1.5.
	* include/grub/serial.h (grub_serial_stop_bits_t): Add
	GRUB_SERIAL_STOP_BITS_1_5.

2012-06-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/wildcard.c (wildcard_expand): Set default return
	value rather than let it uninited.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/wildcard.c (+check_file): New function.
	(wildcard_expand): Don't expand to non-existing files, expand with
	suffix and not attempt to expand if not needed.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/efi/efidisk.c (name_devices): Don't make disks
	out of partitions containing other partitions.

2012-06-07  Vladimir Serbinenko  <phcoder@gmail.com>
