@@ -42,6 +42,7 @@ is_speed_supported (unsigned int speed)
 
 #define GRUB_PL2303_REQUEST_SET_CONFIG 0x20
 #define GRUB_PL2303_STOP_BITS_1 0x0
+#define GRUB_PL2303_STOP_BITS_1_5 0x1
 #define GRUB_PL2303_STOP_BITS_2 0x2
 
 #define GRUB_PL2303_PARITY_NONE 0
@@ -97,6 +98,8 @@ real_config (struct grub_serial_port *port)
 
   if (port->config.stop_bits == GRUB_SERIAL_STOP_BITS_2)
     config_pl2303.stop_bits = GRUB_PL2303_STOP_BITS_2;
+  else if (port->config.stop_bits == GRUB_SERIAL_STOP_BITS_1_5)
+    config_pl2303.stop_bits = GRUB_PL2303_STOP_BITS_1_5;
   else
     config_pl2303.stop_bits = GRUB_PL2303_STOP_BITS_1;
 
@@ -161,6 +164,7 @@ pl2303_hw_configure (struct grub_serial_port *port,
 		       N_("unsupported serial port parity"));
 
   if (config->stop_bits != GRUB_SERIAL_STOP_BITS_1
+      && config->stop_bits != GRUB_SERIAL_STOP_BITS_1_5
       && config->stop_bits != GRUB_SERIAL_STOP_BITS_2)
     return grub_error (GRUB_ERR_BAD_ARGUMENT,
 		       N_("unsupported serial port stop bits number"));
